# handy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
.github/workflows/: develop-build_test_deployrecipe.yml  manual_workflow.yml  topics-build_test.yml
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
src/: CMakeLists.txt
src/app/handy_dialog/handy_dialog/: CMakeLists.txt  main.cpp
src/app/handy_tests/handy_tests/: Base64_tests.cpp  CMakeLists.txt  Crc_tests.cpp  FunctionTraits_tests.cpp  StringId_tests.cpp  StringUtilities_tests.cpp
src/lib/handy/handy/: AtomicVariations.h  Base64.h  Bitmask.h  CMakeLists.txt  Crc.h  FunctionTraits.h  Guard.h  MovableAtomic.h  Observer.h  Pool.h  StringId.h  StringId_Interning.h  StringUtilities.h  Url.h  ZeroOnMove.h  array_utils.h  random.h  tuple_utils.h  vector_utils.h
src/lib/platform/platform/: CMakeFinds.cmake.in  CMakeLists.txt  Filesystem.h  Gui.cpp  Gui.h  Locale.cpp  Locale.h  Path-linux.cpp  Path-windows.cpp  Path.cpp  Path.h
src/lib/resource/resource/: CMakeFinds.cmake.in  CMakeLists.txt  PathProvider.h  ResourceFinder.h  ResourceLocator.h  ResourceManager.h  build_config.h.in
